@startuml

title __TASK02's Class Diagram__\n

  package by.khomenko.task02.entity {
    class Container {
    }
  }
  

  package by.khomenko.task02.reader {
    class DataReader {
    }
  }
  

  package by.khomenko.task02.exception {
    class DataReaderException {
    }
  }
  

  package by.khomenko.task02.logic {
    class Dock {
    }
  }
  

  package by.khomenko.task02.parser {
    class ExperimentDataParser {
    }
  }
  

  package by.khomenko.task02.validator {
    class ExperimentDataValidator {
    }
  }
  

  package by.khomenko.task02.factory {
    class FleetCreator {
    }
  }
  

  package by.khomenko.task02.exception {
    class LineSyntaxException {
    }
  }
  

  package by.khomenko.task02.main {
    class Main {
    }
  }
  

  package by.khomenko.task02.entity {
    class Port {
    }
  }


  package by.khomenko.task02.entity {
    class Ship {
    }
  }
  

  package by.khomenko.task02.parser {
    class SimpleJSONParser {
    }
  }
  

  package by.khomenko.task02.logic {
    class Storage {
    }
  }
  

  package by.khomenko.task02.exception {
    class ValidationException {
    }
  }
  

  Dock -up-|> Callable
  Dock o-- Port : port
  Dock o-- Ship : ship
  Port o-- Storage : storage
  Ship o-- Storage : storage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
